-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.7.0
-
Windows
-
97f4366202d170f8c64df2a9f92d457c69b565cc (qtbase/5.12, 30.9.2018,5.12b1)
When writing text in password field with IME, the text being composed is visible and is also allowed as entry to the password text.
Qt 4.x did not allow non-ascii text to be inserted in password mode, the IME was disabled for the QLineEdit.
Steps to reproduce:
- Run attached sample
- Write text with IME
- EXPECTED: Only the entered ascii letters are accepted
- ACTUAL: Non-ascii letters are accepted, and when composing those non-ascii letters/words (i.e. word being composed out of kanjis in Japanese), the composed word is visible until it has been accepted with enter-key
- relates to
-
QTBUG-40691 Windows QPA plugin ignores the setting in InputMethodHints
-
- Closed
-
For Gerrit Dashboard: QTBUG-56767 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
175410,6 | QLineEdit: Disable input methods for password unless IME supports hidden text | dev | qt/qtbase | Status: ABANDONED | +2 | 0 |
241125,3 | QLineEdit: Disable input methods for password unless IME supports hidden text | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |